<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.countmyh</groupId>
  <artifactId>count-my-hours</artifactId>
  <version>1.0-SNAPSHOT</version>

  <name>count-my-hours</name>
  <description>JavaFX desktop app for tracking and visualizing worked hours per project</description>

  <properties>
    <java.version>23</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>23</maven.compiler.source>
    <maven.compiler.target>23</maven.compiler.target>

    <javafx.version>23.0.2</javafx.version>
    <poi.version>5.3.0</poi.version>
    <jackson.version>2.18.2</jackson.version>
    <junit.version>5.10.3</junit.version>
    <mockito.version>5.14.2</mockito.version>
  </properties>

  <dependencies>

    <!-- ================================================================================== -->
    <!-- JavaFX — UI controls and charts (not bundled with JDK, requires separate modules)  -->
    <!-- ================================================================================== -->
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>${javafx.version}</version>
    </dependency>

    <!-- ================================================================================== -->
    <!-- Apache POI — reading .xlsx files                                                   -->
    <!-- ================================================================================== -->
    <dependency>
      <groupId>org.apache.poi</groupId>
      <artifactId>poi-ooxml</artifactId>
      <version>${poi.version}</version>
    </dependency>

    <!-- ================================================================================== -->
    <!-- Jackson — JSON serialization/deserialization for data persistence                   -->
    <!-- ================================================================================== -->
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jsr310</artifactId>
      <version>${jackson.version}</version>
    </dependency>

    <!-- ================================================================================== -->
    <!-- Test — JUnit 5 + Mockito                                                           -->
    <!-- ================================================================================== -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-params</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <pluginManagement>
      <plugins>

        <!-- clean lifecycle -->
        <!-- see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>

        <!-- ================================================================================== -->

        <!-- process-resources phase -->
        <!-- generate META-INFS como MANIFEST.MD -->
        <plugin>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>

        <!-- Compile phase -->
        <!-- Compiles Java sources: https://maven.apache.org/plugins/maven-compiler-plugin/index.html -->
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.13.0</version>
          <configuration>
            <verbose>true</verbose>
            <fork>true</fork>
            <executable>/Users/tgtoledo/Workstation/JDK/zulu23.32.11-ca-jdk23.0.2-macosx_aarch64/zulu-23.jdk/Contents/Home/bin/javac</executable>
            <release>23</release>
          </configuration>
        </plugin>

        <!-- Test phase -->
        <!-- surefire: Run JUnit unit tests in an isolated classloader -->
        <!-- https://maven.apache.org/surefire/maven-surefire-plugin/ -->
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.5.2</version>
          <configuration>
            <jvm>/Users/tgtoledo/Workstation/JDK/zulu23.32.11-ca-jdk23.0.2-macosx_aarch64/zulu-23.jdk/Contents/Home/bin/java</jvm>
          </configuration>
        </plugin>

        <!-- Package phase -->
        <!-- Build a JAR from the current project -->
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.4.2</version>
          <configuration>
            <archive>
              <manifest>
                <addClasspath>true</addClasspath>
                <classpathPrefix>lib/</classpathPrefix>
                <mainClass>com.countmyh.App</mainClass>
              </manifest>
            </archive>
          </configuration>
        </plugin>

        <!-- Install phase -->
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>

        <!-- Deploy phase -->
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>

        <!-- ================================================================================== -->

        <!-- site lifecycle -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>

        <!-- ================================================================================== -->

      </plugins>
    </pluginManagement>

    <plugins>
      <!-- JavaFX Maven Plugin: run with mvn javafx:run -->
      <!-- Handles module-path and add-modules automatically for classpath mode -->
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <configuration>
          <mainClass>com.countmyh.App</mainClass>
        </configuration>
      </plugin>

      <!-- maven-dependency-plugin: copy all runtime deps to target/lib for jpackage -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <version>3.7.1</version>
        <executions>
          <execution>
            <id>copy-dependencies</id>
            <phase>package</phase>
            <goals>
              <goal>copy-dependencies</goal>
            </goals>
            <configuration>
              <outputDirectory>${project.build.directory}/lib</outputDirectory>
              <includeScope>runtime</includeScope>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
